# fetch-dependency

./: FetchDependency.cmake  FetchDependencyImport.cmake.in  FetchDependencyProject.cmake.in  LICENSE  README.md
.github/workflows/: ci.yml
Steps/: build.in  configure.in  import.cmake.in  step.in
Tests/LibA/: A.cpp  CMakeLists.txt
Tests/LibA/A/: A.hpp
Tests/LibB/: B.cpp  CMakeLists.txt
Tests/LibB/B/: B.hpp
Tests/T0-Basic/: CMakeLists.txt  main.cpp
Tests/T1-Nested/: CMakeLists.txt  main.cpp
